--- a/SwipePhoto/Info.plist
+++ b/SwipePhoto/Info.plist
@@ -9,5 +9,11 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Poppins-Bold.ttf</string>
+		<string>Poppins-Regular.ttf</string>
+		<string>Inter-Regular.ttf</string>
+	</array>
 </dict>
 </plist>
