fix image loading in simulator

--- a/SwipePhoto/Info.plist
+++ b/SwipePhoto/Info.plist
@@ -15,5 +15,7 @@
 		<string>Poppins-Regular.ttf</string>
 		<string>Inter-Regular.ttf</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>SwipePhoto needs access to your photo library to help you organize and clean up your photos by swiping through them.</string>
 </dict>
 </plist>
