--- a/SwipePhoto/Info.plist
+++ b/SwipePhoto/Info.plist
@@ -13,7 +13,7 @@
 	<array>
 		<string>Poppins-Bold.ttf</string>
 		<string>Poppins-Regular.ttf</string>
-		<string>Inter-Regular.ttf</string>
+		<string>Poppins-SemiBold.ttf</string>
 	</array>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>SwipePhoto needs access to your photo library to help you organize and clean up your photos by swiping through them.</string>
