--- a/SwipePhoto/Info.plist
+++ b/SwipePhoto/Info.plist
@@ -11,5 +11,7 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>SwipePhoto needs access to your photo library to help you organize and clean up your photos by swiping through them.</string>
+	<key>UILaunchStoryboardName</key>
+	<string>LaunchScreen</string>
 </dict>
 </plist>
